public/view/UIEntidades/admin/UIEntidades.css
{
    background: #eeeeee;
}

#nav-entity {
    position: fixed;
    top: inherit;
    left: 0;
    width: 250px;
    height: 100%;
    z-index: 3;
}

#nav-menu {
    position: fixed;
    top: inherit;
    left: 250px;
    width: 300px;
    height: 100%;
    z-index: 2;
}

#main {
    position: fixed;
    overflow-y: scroll;
    overflow-x: hidden;
    top: inherit;
    left:0;
    padding: 20px 20px 20px 570px;
    width: 100%;
    height: 100%;
    z-index: 1;
}

#entity-space {
    overflow-y: scroll;
    overflow-x: hidden;
    max-height: calc(100vh - 134px);
}

#space-attr-entity {
    overflow-y: scroll;
    overflow-x: hidden;
}

